--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ header {
     height: 100px;
 }
 
+.main-nav a {
+    text-decoration: none;
+    padding: 0 20px;
+    text-transform: uppercase;
+}
+
 main img {
     width: 100%;
 }
